# Cernaile

./: CMakeLists.txt  README.md  boot.s  linker.ld
src/: boot.asm  kernel.c
